[Modal] Add div and scss section (#42)

--- a/src/scss/ampbin.scss
+++ b/src/scss/ampbin.scss
@@ -142,6 +142,9 @@ footer { font-size:.8em; margin: $spacing; }
 .help { text-decoration: none; color:#222;}
 
 /*-------------------------------------------------------*/
+// Modal
+
+/*-------------------------------------------------------*/
 // Editor :)
 
 #editor { height:70vh; width:100%; }
