[Modal] allow overflow and add padding (#42)

--- a/src/scss/ampbin.scss
+++ b/src/scss/ampbin.scss
@@ -154,6 +154,8 @@ footer { font-size:.8em; margin: $spacing; }
   height:50%;;
   background: rgba(200, 200, 200, 0.9);
   z-index: 99;
+  overflow-y: auto;
+  padding:20px;
 }
 
 /*-------------------------------------------------------*/
