--- a/src/scss/ampbin.scss
+++ b/src/scss/ampbin.scss
@@ -153,9 +153,16 @@ footer { font-size:.8em; margin: $spacing; }
   width:50%;
   height:50%;;
   background: rgba(200, 200, 200, 0.9);
-  z-index: 99;
   overflow-y: auto;
   padding:20px;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity .3s cubic-bezier(0.4,0.0,0.2,1), z-index .3s cubic-bezier(0.4,0.0,0.2,1);
+}
+
+.show {
+  opacity: 1;
+  z-index: 99;
 }
 
 /*-------------------------------------------------------*/
